sizing and instagram

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="main-body" class="container-fixed main-body">
         
         <div class="modal-body row">
-            <div class="col-md-6">
+            <div class="col-md-6 about-me">
                     I'm third year Computer Engineering Student at Georgia Tech with a strong interest in cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
                     <br><br>
                     I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best 'croqueticas' that you will ever find. 
