--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form action="https://formspree.io/ali97@gatech.com" method="POST">
-          <div class="row control-group"> 
+        <form action="https://formspree.io/ali97@gatech.edu" method="POST">
+          <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <input type="text" class="form-control" placeholder="Name" id="name" name="name"
                      onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" required
