--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -78,8 +79,7 @@
         <h2>About</h2></div>
     </div>
     <div class="row">
-      <div class="col-lg-6">
-        <br><br>
+      <div class="col-lg-6 form-group col-xs-12 floating-label-form-group controls" style="border-radius:15px;">
         <p>
             I'm third year Computer Engineering Student at Georgia Tech with a strong interest in software, cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
         </p>
