--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
         <h2>About</h2></div>
     </div>
     <div class="row">
-      <div class="col-lg-6 form-group col-xs-12 floating-label-form-group controls" style="border-radius:15px;">
-        <p>
+      <div class="col-lg-6 floating-label-form-group" style="border-radius:15px; padding-top: 15px;">
+        <p style="font-size: large;">
             I'm third year Computer Engineering Student at Georgia Tech with a strong interest in software, cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
         </p>
-        <p>
+        <p style="font-size: large;">
             I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best 'croqueticas' that you will ever find. You might be curious as to the stark contrast between my first name and last name, so I'll go ahead and clear that up for you. I was born in Lima, Peru to Chinese parents and moved to the states at the age of 5 and I am extraordinarily proud of my Chinese, Hispanic, and American identity. The eclectic theme doesn't just span my identity, but is also engrained into every facet of my life. I'm an avid runner, above average nature lover, zealous hiker, and a rabid fan of esoteric indie music! 
           </p>
-          <p>
+          <p style="font-size: large;">
             My favorite food at the moment is cheese. And unbeknownst to me, until recently, I went on a massive cheese eating excursion only to find out that I'm lactose intolerant. Now I'm just a lactose intolerant kid living in a cheesy world. 
           </p>
       </div>
