--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
         <li class="page-scroll"><a href="#experience">Experience</a></li>
         <li class="page-scroll"><a href="./files/resume.pdf" target="_blank">Resume</a></li>
         <li class="page-scroll"><a href="#contact">Contact</a></li>
-        <!--<li class="page-scroll">
-            <a href="#contact">Contact</a>
-        </li> -->
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -67,6 +64,36 @@
       <div class="col-lg-12">
         <div class="intro-text"><span class="name">Alberto Li</span> <span class="skills">Computer Engineer · Spirited Runner · Nature Lover</span>
         </div>
+          <div class="col-lg-12 text-center">
+              <hr style="display:block;border-style:inset;border-width:1.5px;width:600px;margin-left:auto;margin-right:auto;">
+                <!-- Social Media Buttons -->
+                <ul class="list-inline intro-social-buttons">
+                    <li class="list-inline-item" > <!-- Mail -->
+                        <a href="mailto:ali97@gatech.edu" class="btn btn-secondary btn-lg" style="background-color:white;">
+                            <i class="fa fa-envelope fa-fw" style="color:black;"></i>
+                            <span class="network-name">Email</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item"> <!-- Linkedin -->
+                        <a href="http://www.linkedin.com/in/alberto-li-127410b9" target="_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
+                            <i class="fa fa-linkedin fa-fw" style="color:black;"></i>
+                            <span class="network-name">Linkedin</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item"> <!-- Instagram -->
+                        <a href="https://www.instagram.com/dumb_ytpos/" target="_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
+                            <i class="fa fa-instagram fa-fw" style="color:black;"></i>
+                            <span class="network-name">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item"> <!-- Resume -->
+                        <a href="./files/resume.pdf" target = "_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
+                            <i class="fa fa-download fa-fw" style="color:black;"></i>
+                            <span class="network-name">Resume</span>
+                        </a>
+                    </li>
+                </ul>
+          </div>
       </div>
     </div>
   </div>
