--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
                     <li class="list-inline-item" > <!-- Mail -->
                         <a href="mailto:ali97@gatech.edu" class="btn btn-secondary btn-lg" style="background-color:white;">
                             <i class="fa fa-envelope fa-fw" style="color:black;"></i>
-                            <span class="network-name">Email</span>
+                            <span class="network-name" style="color:black;">Email</span>
                         </a>
                     </li>
                     <li class="list-inline-item"> <!-- Linkedin -->
                         <a href="http://www.linkedin.com/in/alberto-li-127410b9" target="_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
                             <i class="fa fa-linkedin fa-fw" style="color:black;"></i>
-                            <span class="network-name">Linkedin</span>
+                            <span class="network-name" style="color:black;">Linkedin</span>
                         </a>
                     </li>
                     <li class="list-inline-item"> <!-- Instagram -->
                         <a href="https://www.instagram.com/dumb_ytpos/" target="_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
                             <i class="fa fa-instagram fa-fw" style="color:black;"></i>
-                            <span class="network-name">Instagram</span>
+                            <span class="network-name" style="color:black;">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item"> <!-- Resume -->
                         <a href="./files/resume.pdf" target = "_blank" class="btn btn-secondary btn-lg" style="background-color:white;">
                             <i class="fa fa-download fa-fw" style="color:black;"></i>
-                            <span class="network-name">Resume</span>
+                            <span class="network-name" style="color:black;">Resume</span>
                         </a>
                     </li>
                 </ul>
