add website to resume and remove tooltip

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         </p>
         <p style="font-size: large;">
             I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best 
-            <a class="tooltiptext" data-toggle="tooltip" title="<img src=./img/tooltip/croqueta.jpg>">'<u>croqueticas</u>'</a>
-            that you will ever find. You might be curious as to the stark contrast between my first name and last name, so I'll go ahead and clear that up for you. I was born in Peru to Chinese parents and moved to the states at the age of 5 and I am extraordinarily proud of my Chinese, Hispanic, and American identity.
+            'croqueticas' in the states! You might be curious as to the stark contrast between my first name and last name, so I'll go ahead and clear that up for you. I was born in Peru to Chinese parents and moved to the states at the age of 5 and I am extraordinarily proud of my Chinese, Hispanic, and American identity.
           </p>
         <p style="font-size: large;">
            The eclectic theme doesn't just span my identity, but is also engrained into every facet of my life. I'm an avid runner, above average nature lover, zealous hiker, and a rabid fan of esoteric indie music! 
