--- a/index.html
+++ b/index.html
@@ -139,19 +139,17 @@
     <div id="cd-timeline" class="col-lg-8 text-center">
       <h2>Experience</h2>
       <!-- cd-timeline-block -->
-<!--
       <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-company"><img src="img/logo/exxon.gif" alt="Picture"></div>
--->
+        <a href="http://corporate.exxonmobil.com/" target="_blank">
+            <div class="cd-timeline-img cd-company"><img src="img/logo/exxon.gif" alt="Picture"></div>
+        </a>
         <!-- cd-timeline-img -->
-<!--
         <div class="cd-timeline-content text-left">
-          <h4 style="padding-bottom: 0px;">ExxonMobil | Incoming Software Engineering Intern</h4>
-          <h5 style="padding-bottom: 0px;">May 2018</h5>
+          <h4 style="padding-bottom: 0px;">ExxonMobil | Software Engineering Intern</h4>
+          <h5 style="padding-bottom: 0px;">May 2018 - Present </h5>
         </div>
--->
         <!-- cd-timeline-content -->
-<!--      </div>-->
+      </div>
       <!-- cd-timeline-block -->
       <div class="cd-timeline-block">
         <a href="https://www.intel.com" target="_blank">
@@ -160,7 +158,10 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;"> Intel Corporation | SSD Test Software Development Intern </h4>
-          <h5 style="padding-bottom: 0px;">Jan 2018 - Present </h5>
+          <h5 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h5>
+          <p>• Automated yield report generation and distribution for 3D XPoint Apache Pass persistent memory DIMMs </p>
+          <p>• Optimized read-write test algorithm for SSDs to dynamically allocate resources, increasing throughput by 5% </p>
+          <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
         </div>
       </div>
       <!-- cd-timeline-block -->
