--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;"> Intel Corporation | SSD Test Software Development Intern </h4>
           <h5 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h5>
-          <p>• Automated yield report generation and distribution for 3D XPoint Apache Pass persistent memory DIMMs </p>
-          <p>• Optimized read-write test algorithm for SSDs to dynamically allocate resources, increasing throughput by 5% </p>
+          <p>• Decreased SSD test time by modifying read/write algorithm to dedicate variable bandwidth for platform configuration</p>
           <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
+          <p>• Automated yield report generation and distribution for 3D XPoint Apache Pass persistent memory DIMMs </p>
         </div>
       </div>
       <!-- cd-timeline-block -->
