--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="row">
       <div class="col-lg-6" style="border-radius:15px; padding-top: 15px;">
         <p style="font-size: large;">
-            I'm a third year Computer Engineering Student at Georgia Tech with a strong interest in software, cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
+            I'm a fourth year Computer Engineering Student at Georgia Tech with a strong interest in software, cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
         </p>
         <p style="font-size: large;">
             I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best 
