--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </a>  
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
-          <h4 style="padding-bottom: 0px;"> Intel Corporation | SSD Test Software Development Intern </h4>
+          <h4 style="padding-bottom: 0px;"> Intel Corporation | Product Development Intern </h4>
           <h5 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h5>
           <p>• Decreased SSD test time by modifying read/write algorithm to dedicate variable bandwidth for platform configuration</p>
           <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
