--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">ExxonMobil | Software Engineering Intern</h4>
-          <h5 style="padding-bottom: 0px;">May 2018 - Present </h5>
+          <h5 style="padding-bottom: 0px;">May 2018 - August 2018 </h5>
         </div>
         <!-- cd-timeline-content -->
       </div>
