small change. remove ap from resume

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <h5 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h5>
           <p>• Decreased SSD test time by modifying read/write algorithm to dedicate variable bandwidth for platform configuration</p>
           <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
-          <p>• Automated yield report generation and distribution for 3D XPoint Apache Pass persistent memory DIMMs </p>
+          <p>• Automated yield report generation and distribution for 3D XPoint persistent memory DIMMs </p>
         </div>
       </div>
       <!-- cd-timeline-block -->
