--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Intelligent Vision and Automation Lab, Gatech | Research Assistant </h4>
           <h5 style="padding-bottom: 0px;">Sept 2016 - May 2017</h5>
-          <p>• Created Gazebo virtual environment for Robotic arm simulation in ROS. </p>
-          <p>• Interfaced Kinect Camera with simulation to publish RGB-D information to simulated environment. </p>
+          <p>• Worked on Gazebo virtual environment for Robotic arm simulation in ROS. </p>
         </div>
         <!-- cd-timeline-content -->
       </div>
@@ -200,8 +199,8 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;"> ECE 2031 Digital Design Lab | Teaching Assistant</h4>
           <h5 style="padding-bottom: 0px;">Jan 2017 ~ Dec 2017</h5>
-          <p>• Facilitate student learning in a rapid-prototyping lab class dominated by FPGA projects. </p>
-          <p>• Aid students in designing and validating basic digital logic using oscilloscopes and logic analyzers. </p>
+          <p>• Facilitate student learning in a rapid-prototyping lab environment involving FPGA projects. </p>
+          <p>• Aid students in creating basic digital logic circuits and help debug them with oscilloscopes and logic analyzers. </p>
         </div>
         <!-- cd-timeline-content -->
       </div>
