--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Inan Medical Devices Research Lab, Gatech | Research Assistant</h4>
           <h5 style="padding-bottom: 0px;">Sep 2016 ~ May 2017</h5>
-          <p>• Tested and experimented with different sensor materials to conclude feasibility of detecting a sensor on a human body for research in smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices.</p>
+          <p>• Vetted sensor materials to conclude feasibility of detecting a sensor on a human body for research in smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices.</p>
           <p>• Implemented vibrational system using accelerometers and bone transducers to generate a heatmap that would predict sensor location as a proof of concept</p>
         </div>
         <!-- cd-timeline-content -->
