--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
       <h2>Experience</h2>
       <!-- cd-timeline-block -->
       <div class="cd-timeline-block">
+        <a href="https://www.goldmansachs.com/" target="_blank">
+            <div class="cd-timeline-img cd-company"><img src="img/logo/goldman_sachs.jpg" alt="Picture"></div>
+        </a>
+        <!-- cd-timeline-img -->
+        <div class="cd-timeline-content text-left">
+          <h4 style="padding-bottom: 0px;">Goldman Sachs | Investment Banking Division Engineering Summer Analyst</h4>
+          <h5 style="padding-bottom: 0px;">May 2019 - August 2019 </h5>
+        </div>
+        <!-- cd-timeline-content -->
+      </div>
+      <!-- cd-timeline-block -->
+      <div class="cd-timeline-block">
         <a href="http://corporate.exxonmobil.com/" target="_blank">
             <div class="cd-timeline-img cd-company"><img src="img/logo/exxon.gif" alt="Picture"></div>
         </a>
