Added some Projects, add word_resume

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </li>
         <li class="page-scroll"><a href="#about">About</a></li>
         <li class="page-scroll"><a href="#experience">Experience</a></li>
-<!--         <li class="page-scroll"><a href="./files/resume.pdf" target="_blank">Resume</a></li>-->        
+        <li class="page-scroll"><a href="#portfolio">Projects</a></li>
         <li class="page-scroll"><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -103,7 +103,8 @@
   <div class="container" >
     <div class="row">
       <div class="col-lg-12 text-center" >
-        <h2>About</h2></div>
+        <h2>About</h2>
+      </div>
     </div>
     <div class="row">
       <div class="col-lg-6" style="border-radius:15px; padding-top: 15px;">
@@ -154,7 +155,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Goldman Sachs | Investment Banking Division Engineering Summer Analyst</h4>
-          <h5 style="padding-bottom: 0px;">May 2019 - August 2019 </h5>
+          <h5 style="padding-bottom: 0px;">New York, NY</h5>
+          <h6 style="padding-bottom: 0px;">May 2019 - August 2019 </h6>
         </div>
         <!-- cd-timeline-content -->
       </div>
@@ -166,7 +168,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">ExxonMobil | Software Engineering Intern</h4>
-          <h5 style="padding-bottom: 0px;">May 2018 - August 2018 </h5>
+          <h5 style="padding-bottom: 0px;">Houston, TX</h5>
+          <h6 style="padding-bottom: 0px;">May 2018 - August 2018 </h6>
         </div>
         <!-- cd-timeline-content -->
       </div>
@@ -177,8 +180,9 @@
         </a>  
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
-          <h4 style="padding-bottom: 0px;"> Intel Corporation | Product Development Intern </h4>
-          <h5 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h5>
+          <h4 style="padding-bottom: 0px;">Intel Corporation | Product Development Intern </h4>
+          <h5 style="padding-bottom: 0px;">Folsom, CA</h5>
+          <h6 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h6>
           <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
           <p>• Automated yield report generation and distribution for 3D XPoint persistent memory DIMMs </p>
         </div>
@@ -191,7 +195,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Intelligent Vision and Automation Lab, Gatech | Research Assistant </h4>
-          <h5 style="padding-bottom: 0px;">Sept 2016 - May 2017</h5>
+          <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
+          <h6 style="padding-bottom: 0px;">Sept 2016 - May 2017</h6>
           <p>• Worked on Gazebo virtual environment for Robotic arm simulation in ROS. </p>
         </div>
         <!-- cd-timeline-content -->
@@ -204,7 +209,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">General Electric | Embedded Software Engineering Intern </h4>
-          <h5 style="padding-bottom: 0px;">May 2017 - Aug 2017</h5>
+          <h5 style="padding-bottom: 0px;">Minden, NV</h5>
+          <h6 style="padding-bottom: 0px;">May 2017 - Aug 2017</h6>
           <p>• Developed advanced debugging system for the Bently 3500 Protection Device to move towards reducing development time by 3 months.</p>
           <p>• Designed and implemented architecture for client-server model application using the QNX Real-Time Operating System for a multi-threaded C/C++ Server application and C#/.NET for a Client front-end GUI using Berkeley Sockets API.</p>
           <p>• Provided 20+ page technical design report for the BeaglePlane, an advanced debugging system for the Bently 3500 Protection Device</p>
@@ -218,7 +224,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;"> ECE 2031 Digital Design Lab | Teaching Assistant</h4>
-          <h5 style="padding-bottom: 0px;">Jan 2017 ~ Dec 2017</h5>
+          <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
+          <h6 style="padding-bottom: 0px;">Jan 2017 ~ Dec 2017</h6>
           <p>• Facilitate student learning in a rapid-prototyping lab environment involving FPGA projects. </p>
           <p>• Aid students in creating basic digital logic circuits and help debug them with oscilloscopes and logic analyzers. </p>
         </div>
@@ -232,7 +239,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Inan Medical Devices Research Lab, Gatech | Research Assistant</h4>
-          <h5 style="padding-bottom: 0px;">Sep 2016 ~ May 2017</h5>
+          <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
+          <h6 style="padding-bottom: 0px;">Sep 2016 ~ May 2017</h6>
           <p>• Vetted sensor materials to conclude feasibility of detecting a sensor on a human body for research in smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices.</p>
           <p>• Implemented vibrational system using accelerometers and bone transducers to generate a heatmap that would predict sensor location as a proof of concept</p>
         </div>
@@ -246,7 +254,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Florida Power & Light | Software Engineering Intern</h4>
-          <h5 style="padding-bottom: 0px;">May 2016 ~ Aug 2016</h5>
+          <h5 style="padding-bottom: 0px;">Miami, FL</h5>
+          <h6 style="padding-bottom: 0px;">May 2016 ~ Aug 2016</h6>
           <p>• Designed, developed, and released an application using Visual Basic and SQL Server for Customer Accounting to increase visibility and reporting capabilities to the process improvement team, impacting a department of over 60 employees.</p>
           <p>• Streamlined internal questions backlog process through automation by turning a physical binder of questions into a database application.</p>
         </div>
@@ -260,7 +269,8 @@
         <!-- cd-timeline-img -->
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Georgia Institute of Technology | Student</h4>
-          <h5 style="padding-bottom: 0px;">Aug 2015 ~ Present</h5>
+          <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
+          <h6 style="padding-bottom: 0px;">Aug 2015 ~ Present</h6>
           <p>School of Electrical and Computer Engineering</p>
           <p>Computer Engineering Major</p>
         </div>
@@ -271,17 +281,16 @@
   <!-- cd-timeline-block -->
 </section>
 <!-- Portfolio Grid Section -->
-<!--<section id="portfolio">-->
-<!--
+<section id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Portfolio</h2></div>
+        <h2>Projects</h2></div>
     </div>
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="demo-wrapper">
-          <div class="text-center demo-options" style="text-align: center;">
+          <!-- <div class="text-center demo-options" style="text-align: center;">
             <label>
               <input class="btn btn-lg btn-outline" name="filter" type="radio" value="" checked>All</label>
             <label>
@@ -298,33 +307,36 @@
               <input class="btn btn-lg btn-outline" name="filter" type="radio" value=".mobile">Mobile</label>
             <label>
               <input class="btn btn-lg btn-outline" name="filter" type="radio" value=".web">Web</label>
-          </div>
+          </div> -->
           <div class="brickfolio">
             <div class=" portfolio-item bf-item ml python db">
-              <a href="#sabermetric_modal" class="portfolio-link" data-toggle="modal">
+              <h3 style="padding-bottom: 0px"> Autonomous Blimp </h3>
+              <a href="#gtmab_modal" class="portfolio-link" data-toggle="modal">
                 <div class="caption">
                   <div class="caption-content">
-                    <h3>Sabermetrics ML</h3></div>
+                    <h3>A Deep Learning Approach to Localization and Tracking</h3></div>
                 </div>
-                <img src="./img/portfolio/sabermetric.jpg" class="img-responsive" alt=""> </a>
+                <img src="./img/portfolio/gtmab.png" class="img-responsive" alt=""> </a>
+            </div>
+            <div class="portfolio-item bf-item ml python">
+              <h3 style="padding-bottom: 0px"> Distracted Driving </h3>
+              <a href="#myangelsight_modal" class="portfolio-link" data-toggle="modal">
+                <div class="caption">
+                  <div class="caption-content">
+                    <h3>A Computer Vision Approach for Monitoring Distracted Driving</h3></div>
+                </div>
+                <img src="./img/portfolio/myangelsight.jpg" class="img-responsive" alt=""> </a>
             </div>
             <div class=" portfolio-item bf-item ml python">
-              <a href="#facebook_sentiment_modal" class="portfolio-link" data-toggle="modal">
+              <h3 style="padding-bottom: 0px"> Smart Hedgehog Home </h3>
+              <a href="#hedgehog_home_modal" class="portfolio-link" data-toggle="modal">
                 <div class="caption">
                   <div class="caption-content">
-                    <h3>Sentiment Analysis</h3></div>
-                </div>
-                <img src="./img/portfolio/facebook_sentiment.jpg" class="img-responsive" alt=""> </a>
+                    <h3>IoT Smart Hedgehog Home</h3></div>
+                </div>  
+                <img src="./img/portfolio/hedgehog.jpg" class="img-responsive" alt=""> </a>
             </div>
-            <div class=" portfolio-item bf-item ml python">
-              <a href="#multimodal_modal" class="portfolio-link" data-toggle="modal">
-                <div class="caption">
-                  <div class="caption-content">
-                    <h3>Multimodal Deep Learning Prediction</h3></div>
-                </div>
-                <img src="./img/portfolio/multimodal.jpg" class="img-responsive" alt=""> </a>
-            </div>
-            <div class=" portfolio-item bf-item python web js db">
+            <!-- <div class=" portfolio-item bf-item python web js db">
               <a href="#food_therapy_modal" class="portfolio-link" data-toggle="modal">
                 <div class="caption">
                   <div class="caption-content">
@@ -374,11 +386,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
+    <h3 style="text-align: center;">Please Check Back soon for more...</h3>
   </div>
--->
-<!--</section>-->
+</section>
 <!-- Contact -->
 <section class="success" id="contact">
   <div class="container">
@@ -458,7 +470,6 @@
   <a class="btn btn-primary" href="#page-top"> <i class="fa fa-chevron-up"></i> </a>
 </div>
 <!-- Portfolio Modals -->
-<!--
 <div class="portfolio-modal modal fade" id="mavi_modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
@@ -490,7 +501,7 @@
     </div>
   </div>
 </div>
-<div class="portfolio-modal modal fade" id="sabermetric_modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="gtmab_modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -501,23 +512,21 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2 class="h2-boxed">Sabermetrics ML</h2>
-            <p>Developed various machine learning based prediction models using raw data scraped from the MLB Gameday website using R and Python. Designed unique features, automated the model training process, and simplified cross-validation and ROC analysis for evaluations. Also, created an API for predicting the next pitch ball type using pre-trained models for MLB team managers.</p>
+            <h2 class="h2-boxed">GT-MAB</h2>
+            <img src="./img/portfolio/gtmab.png" class="img-responsive" alt="">
             <ul class="list-inline item-details">
-              <li><strong><a class="btn btn-sm btn-outline" href="https://www.slideshare.net/slideshow/embed_code/key/4SogNCWKynMrIS"
-                             target="_blank"><i class="fa fa-fw fa-file-powerpoint-o"></i> Slides</a>
-              </strong></li>
-              <li><strong><a class="btn btn-sm btn-outline" href="https://github.com/albertoli/Baseball_Analytics_ML"
-                             target="_blank"><i class="fa fa-fw fa-github"></i> GitHub</a>
+              <li><strong><a class="btn btn-sm btn-outline" href="/projects/gtmab/index.html"
+                              target="_blank"><i class="fa fa-fw fa-code"></i> Demo Site </a>
               </strong></li>
             </ul>
+            <p>Worked on Miniature Autonomous robotic Blimps (GT-MAB) as flying vehicles for indoor experiments that support research on mobile sensor networks, 3D motion control and human-robot interaction (HRI). The motivation for developing a deep learning approach to localization and tracking is to prove that such a platform could be used for complex tasks in autonomy that could eventually lead to applications such as surveillance of large indoor spaces or assisting with evacuation procedures.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="portfolio-modal modal fade" id="facebook_sentiment_modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="hedgehog_home_modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -528,13 +537,15 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2 class="h2-boxed">Facebook Sentiment Analysis</h2>
-            <p>Designed a tool for analyzing and visualizing public sentimental responses to Facebook page posts using LDA, PCA and clustering. Explored NLP techniques such as N-grams features selection, along with both supervised / unsupervised learning algorithms for classifications and predictions of sentiments (facebook reactions).</p>
+            <h2 class="h2-boxed">IoT Smart Hedgehog Home</h2>
+            <p>A hedgehog smart house that will allow users to monitor their hedgehog remotely. The smart environment will allow health monitoring features for the hedgehog to be autonomously driven by data collected from a range of sensors. The sensory feedback data provided from the smart environment will be uploaded to a cloud through Amazon Web Services (AWS) and stored in a cloud Relational Database Service (RDS).<br><br>
+
+            The user will be able to interface with the smart environment through a web interface. It will allow for the user to monitor the status of the hedgehog by looking at graphs of certain metrics such as amount of time the hedgehog runs on the wheel and the temperature of his environment in a dashboard interface.</p>
             <ul class="list-inline item-details">
-              <li><strong><a class="btn btn-sm btn-outline" href="./files/facebook_sentiment_analysis.pdf"
-                             target="_blank"><i class="fa fa-fw fa-file-pdf-o"></i> PDF</a>
+              <li><strong><a class="btn btn-sm btn-outline" href="https://os.mbed.com/users/albertoli/notebook/iot_smart_hedgehog_home/"
+                              target="_blank"><i class="fa fa-fw fa-code"></i> Demo Site </a>
               </strong></li>
-              <li><strong><a class="btn btn-sm btn-outline" href="https://github.com/albertoli/Facebook_Status_Semtiment_Analysis"
+              <li><strong><a class="btn btn-sm btn-outline" href="https://github.com/AlbertoLi/iot_smart_hedgehog_home"
                              target="_blank"><i class="fa fa-fw fa-github"></i> GitHub</a>
               </strong></li>
             </ul>
@@ -544,7 +555,7 @@
     </div>
   </div>
 </div>
-<div class="portfolio-modal modal fade" id="multimodal_modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="myangelsight_modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -555,13 +566,17 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2 class="h2-boxed">Multimodal Deep Learning for Performance Prediction</h2>
-            <p>Built a binary prediction model using multimodal data sources (statistics, articles, tweets) for sports games with a 60.1% accuracy. Used restricted Boltzman machine for deep feature representation learning, testing it on 8 different machine learning algorithms for comparing results.</p>
+            <h2 class="h2-boxed">Monitoring For Distracted Driving</h2>
+            <h3>First Place at AuburnHacks 2019</h3>
+            <p>Project that looks at the behavior of a driver to detect if they are distracted. The motivation for this project is to help reduce distracted driving by providing positive reinforcements to drive safe. This idea  can be used by companies like insurance companies to predict the risk factor of drivers and reward drivers that are safer. The end result of a tool like this would be safer transportation, especially considering that the leading cause of death for U.S. teens is motor vehicle accidents.</p>
             <ul class="list-inline item-details">
-              <li><strong><a class="btn btn-sm btn-outline" href="./files/multimodal_deep_learning_prediction.pdf"
-                             target="_blank"><i class="fa fa-fw fa-file-pdf-o"></i> PDF</a>
+              <li><strong><a class="btn btn-sm btn-outline" href="https://devpost.com/software/myangelsight"
+                              target="_blank"><i class="fa fa-fw fa-code"></i> Demo Site </a>
               </strong></li>
-              <li><strong><a class="btn btn-sm btn-outline" href="https://github.com/jonl1096/MultimodalDeepLearning-PerformancePrediction"
+              <!-- <li><strong><a class="btn btn-sm btn-outline" href="https://myangelsight.com/?fbclid=IwAR1OvGOXctARCfr0eBsa2CtiUCCLygC5doVDWUOnvvVZ-yPpU28UPexAMNM"
+                              target="_blank"><i class="fa fa-fw fa-code"></i> Site </a>
+              </strong></li> -->
+              <li><strong><a class="btn btn-sm btn-outline" href="https://github.com/ytulsiani/MyAngelSight"
                              target="_blank"><i class="fa fa-fw fa-github"></i> GitHub</a>
               </strong></li>
             </ul>
@@ -571,7 +586,7 @@
     </div>
   </div>
 </div>
-<div class="portfolio-modal modal fade" id="food_therapy_modal" tabindex="-1" role="dialog" aria-hidden="true">
+<!-- <div class="portfolio-modal modal fade" id="food_therapy_modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -705,8 +720,7 @@
       </div>
     </div>
   </div>
-</div>
--->
+</div> -->
 <!-- jQuery -->
 <script src="jquery/jquery.min.js"></script>
 <script src="jquery/jquery.brickfolio.min.js"></script>
