minor style change, padding

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
       </div> -->
     </div>
-    <h3 style="text-align: center;">Please Check Back soon for more...</h3>
+    <h3 style="text-align: center; padding-top: 50px;">Check Back Soon for more projects...</h3>
   </div>
 </section>
 <!-- Contact -->
