try fix issue where project images not showing

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   <div class="caption-content">
                     <h3>A Deep Learning Approach to Localization and Tracking</h3></div>
                 </div>
-                <img src="./img/portfolio/gtmab.png" class="img-responsive" alt=""> </a>
+                <img src="img/portfolio/gtmab.png" class="img-responsive" alt=""> </a>
             </div>
             <div class="portfolio-item bf-item ml python">
               <h3 style="padding-bottom: 0px"> Distracted Driving </h3>
@@ -325,7 +325,7 @@
                   <div class="caption-content">
                     <h3>A Computer Vision Approach for Monitoring Distracted Driving</h3></div>
                 </div>
-                <img src="./img/portfolio/myangelsight.jpg" class="img-responsive" alt=""> </a>
+                <img src="img/portfolio/myangelsight.jpg" class="img-responsive" alt=""> </a>
             </div>
             <div class=" portfolio-item bf-item ml python">
               <h3 style="padding-bottom: 0px"> Smart Hedgehog Home </h3>
@@ -334,7 +334,7 @@
                   <div class="caption-content">
                     <h3>IoT Smart Hedgehog Home</h3></div>
                 </div>  
-                <img src="./img/portfolio/hedgehog.jpg" class="img-responsive" alt=""> </a>
+                <img src="img/portfolio/hedgehog.jpg" class="img-responsive" alt=""> </a>
             </div>
             <!-- <div class=" portfolio-item bf-item python web js db">
               <a href="#food_therapy_modal" class="portfolio-link" data-toggle="modal">
