fix gtmab images

--- a/projects/gtmab/index.html
+++ b/projects/gtmab/index.html
@@ -309,11 +309,11 @@
 					<div class="flex">
 						<div class="row">
 							<div class="column" style="display: block; margin: auto; border-right: 0px;">
-								<img src="./images/fun/group_wholesome.jpg" style="width: 400px; height: 400px">
+								<img src="./images/fun/group_expo.jpg" style="width: 400px; height: 400px">
 								<label style="text-align: center; color:white;">Wholesome Group Picture</label>
 							</div>
 							<div class="column" style="display: block; margin: auto; border-right: 0px;">
-									<img src="./images/fun/setup.JPG" style="width: 400px; height: 400px">
+									<img src="./images/fun/setup.jpg" style="width: 400px; height: 400px">
 									<label style="text-align: center; color:white;">Presentation Setup</label>
 							</div>
 						</div>
