small style got gt-mab modal padding

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2 class="h2-boxed">GT-MAB</h2>
+            <h2 class="h2-boxed" style="padding-bottom: 10px;">GT-MAB</h2>
             <img src="./img/portfolio/gtmab.png" class="img-responsive" alt="">
             <ul class="list-inline item-details">
               <li><strong><a class="btn btn-sm btn-outline" href="/projects/gtmab/index.html"
